<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout_Main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TextView_date"
            android:text="2000/1/1"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />

        <ImageButton
            android:id="@+id/ImageButton_Add"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_add_24"
            android:background="@color/white"
            android:contentDescription="@string/Button_Add_description" />


        <ImageButton
            android:id="@+id/ImageButton_Import"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_get_app_24"
            android:background="@color/white"
            android:contentDescription="@string/Button_Import_Description" />

        <ImageButton
            android:id="@+id/ImageButton_Export"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_exit_to_app_24"
            android:background="@color/white"
            android:contentDescription="@string/Button_Export_Description" />

        <ImageButton
            android:id="@+id/ImageButton_Settings"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_more_vert_24"
            android:background="@color/white"
            android:contentDescription="@string/Button_Settings_Description" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_WeekHeader"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_rowWeight="0.25"
            android:layout_weight="0"
            android:gravity="center"
            android:text="" />

        <TextView
            android:id="@+id/textView_Monday"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_rowWeight="0.25"
            android:layout_weight="1"
            android:autoSizeMaxTextSize="30sp"
            android:autoSizeMinTextSize="5sp"
            android:autoSizeStepGranularity="1sp"
            android:gravity="center"
            android:text="@string/Monday"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_rowWeight="0.25"
            android:layout_weight="1"
            android:autoSizeMaxTextSize="30sp"
            android:autoSizeMinTextSize="5sp"
            android:autoSizeStepGranularity="1sp"
            android:gravity="center"
            android:text="@string/Tuesday"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_rowWeight="0.25"
            android:layout_weight="1"
            android:autoSizeMaxTextSize="30sp"
            android:autoSizeMinTextSize="5sp"
            android:autoSizeStepGranularity="1sp"
            android:gravity="center"
            android:text="@string/Wednesday"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_rowWeight="0.25"
            android:layout_weight="1"
            android:autoSizeMaxTextSize="30sp"
            android:autoSizeMinTextSize="5sp"
            android:autoSizeStepGranularity="1sp"
            android:gravity="center"
            android:text="@string/Thursday"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_rowWeight="0.25"
            android:layout_weight="1"
            android:autoSizeMaxTextSize="30sp"
            android:autoSizeMinTextSize="5sp"
            android:autoSizeStepGranularity="1sp"
            android:gravity="center"
            android:text="@string/Friday"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_rowWeight="0.25"
            android:layout_weight="1"
            android:autoSizeMaxTextSize="30sp"
            android:autoSizeMinTextSize="5sp"
            android:autoSizeStepGranularity="1sp"
            android:gravity="center"
            android:text="@string/Saturday"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_rowWeight="0.25"
            android:layout_weight="1"
            android:autoSizeMaxTextSize="30sp"
            android:autoSizeMinTextSize="5sp"
            android:autoSizeStepGranularity="1sp"
            android:gravity="center"
            android:text="@string/Sunday"
            android:textSize="20sp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.example.application_schedule.ScheduleView
            android:id="@+id/ScheduleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:addBgColor="#dff4ff"
            app:addTextColor="#47a1f6"
            app:addTextSize="26sp"
            app:bgColor="#ffffff"
            app:columnNumber="7"
            app:currentTimeColor="#5e636c"
            app:currentTimeTextColor="#ffffff"
            app:currentTimeTextSize="10sp"
            app:eventTextBgColor="#85cdca"
            app:eventTextBgLineColor="#dfdfdf"
            app:eventTextColor="#FF000000"
            app:eventTextSize="12sp"
            app:hourTextBgColor="#ffffff"
            app:hourTextColor="#525252"
            app:hourTextSize="10sp"
            app:lineColor="#dfdfdf"
            app:lineSize="1dp"
            app:pastTimeColor="#eff5f9"
            app:rowHeight="60dp" />
    </ScrollView>
</LinearLayout>